--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "aedes": "^0.46.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "twitter-api-client": "^1.4.0",
     "websocket-stream": "^5.5.2"
   },
   "devDependencies": {},
