--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "twitter-api-client": "^1.4.0",
+    "twitter-lite": "^1.1.0",
     "websocket-stream": "^5.5.2"
   },
   "devDependencies": {},
